src/main/bkool/parser/BKOOLParser.py
# Generated from main/bkool/parser/BKOOL.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class BKOOLParser ( Parser ):

    grammarFileName = "BKOOL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'='", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'boolean'", "'break'", "'class'", 
                     "'continue'", "'do'", "'else'", "'extends'", "'float'", 
                     "'if'", "'int'", "'new'", "'string'", "'then'", "'for'", 
                     "'return'", "'true'", "'false'", "'void'", "'nil'", 
                     "'this'", "'final'", "'static'", "'to'", "'downto'", 
                     "'+'", "'-'", "'*'", "'/'", "'\\'", "'%'", "'!='", 
                     "'=='", "'<'", "'>'", "'<='", "'>='", "'||'", "'&&'", 
                     "'!'", "'^'", "'['", "']'", "':'", "'('", "')'", "';'", 
                     "'.'", "','", "'}'", "'{'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "COMMENT", "INT_LIT", "FLOAT_LIT", 
                      "BOOL_LIT", "STRING_LIT", "BOOLEAN", "BREAK", "CLASS", 
                      "CONTINUE", "DO", "ELSE", "EXTENDS", "FLOAT", "IF", 
                      "INT", "NEW", "STRING", "THEN", "FOR", "RETURN", "TRUE", 
                      "FALSE", "VOID", "NIL", "THIS", "FINAL", "STATIC", 
                      "TO", "DOWNTO", "ADD", "SUB", "MUL", "FDIV", "IDIV", 
                      "MOD", "NOT_EQUAL", "EQUAL", "LTHAN", "GTHAN", "LEQUAL", 
                      "GEQUAL", "OR", "AND", "NOT", "CONCATE", "LSB", "RSB", 
                      "COLON", "LB", "RB", "SEMI", "DOT", "COMMA", "RP", 
                      "LP", "ID", "WS", "ERROR_CHAR", "UNCLOSE_STRING", 
                      "ILLEGAL_ESCAPE" ]

    RULE_program = 0
    RULE_list_class_dec = 1
    RULE_mptype = 2
    RULE_class_dec = 3
    RULE_list_member = 4
    RULE_list_attrib_dec = 5
    RULE_list_method_dec = 6
    RULE_decl_var = 7
    RULE_attrib_dec = 8
    RULE_list_attrib_const = 9
    RULE_list_attrib_var = 10
    RULE_attrib_const = 11
    RULE_attrib_var = 12
    RULE_method_dec = 13
    RULE_list_para = 14
    RULE_para_dec = 15
    RULE_list_id = 16
    RULE_array_lit = 17
    RULE_list_lit = 18
    RULE_list_int = 19
    RULE_list_float = 20
    RULE_list_bool = 21
    RULE_list_string = 22
    RULE_common_type = 23
    RULE_primitive_type = 24
    RULE_array_type = 25
    RULE_exp = 26
    RULE_exp1 = 27
    RULE_exp2 = 28
    RULE_exp3 = 29
    RULE_exp4 = 30
    RULE_exp5 = 31
    RULE_exp6 = 32
    RULE_exp7 = 33
    RULE_exp8 = 34
    RULE_exp9 = 35
    RULE_exp10 = 36
    RULE_exp11 = 37
    RULE_literals = 38
    RULE_list_arg = 39
    RULE_listexp = 40
    RULE_all_state = 41
    RULE_list_state = 42
    RULE_list_decl_var = 43
    RULE_block_state = 44
    RULE_exp_state = 45
    RULE_assign_state = 46
    RULE_if_state = 47
    RULE_for_state = 48
    RULE_break_state = 49
    RULE_continue_state = 50
    RULE_return_state = 51
    RULE_invocation_state = 52

    ruleNames =  [ "program", "list_class_dec", "mptype", "class_dec", "list_member", 
                   "list_attrib_dec", "list_method_dec", "decl_var", "attrib_dec", 
                   "list_attrib_const", "list_attrib_var", "attrib_const", 
                   "attrib_var", "method_dec", "list_para", "para_dec", 
                   "list_id", "array_lit", "list_lit", "list_int", "list_float", 
                   "list_bool", "list_string", "common_type", "primitive_type", 
                   "array_type", "exp", "exp1", "exp2", "exp3", "exp4", 
                   "exp5", "exp6", "exp7", "exp8", "exp9", "exp10", "exp11", 
                   "literals", "list_arg", "listexp", "all_state", "list_state", 
                   "list_decl_var", "block_state", "exp_state", "assign_state", 
                   "if_state", "for_state", "break_state", "continue_state", 
                   "return_state", "invocation_state" ]

    EOF = Token.EOF
    T__0=1
    COMMENT=2
    INT_LIT=3
    FLOAT_LIT=4
    BOOL_LIT=5
    STRING_LIT=6
    BOOLEAN=7
    BREAK=8
    CLASS=9
    CONTINUE=10
    DO=11
    ELSE=12
    EXTENDS=13
    FLOAT=14
    IF=15
    INT=16
    NEW=17
    STRING=18
    THEN=19
    FOR=20
    RETURN=21
    TRUE=22
    FALSE=23
    VOID=24
    NIL=25
    THIS=26
    FINAL=27
    STATIC=28
    TO=29
    DOWNTO=30
    ADD=31
    SUB=32
    MUL=33
    FDIV=34
    IDIV=35
    MOD=36
    NOT_EQUAL=37
    EQUAL=38
    LTHAN=39
    GTHAN=40
    LEQUAL=41
    GEQUAL=42
    OR=43
    AND=44
    NOT=45
    CONCATE=46
    LSB=47
    RSB=48
    COLON=49
    LB=50
    RB=51
    SEMI=52
    DOT=53
    COMMA=54
    RP=55
    LP=56
    ID=57
    WS=58
    ERROR_CHAR=59
    UNCLOSE_STRING=60
    ILLEGAL_ESCAPE=61

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def list_class_dec(self):
            return self.getTypedRuleContext(BKOOLParser.List_class_decContext,0)


        def EOF(self):
            return self.getToken(BKOOLParser.EOF, 0)

        def getRuleIndex(self):
            return BKOOLParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = BKOOLParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.list_class_dec()
            self.state = 107
            self.match(BKOOLParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class List_class_decContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def class_dec(self):
            return self.getTypedRuleContext(BKOOLParser.Class_decContext,0)


        def list_class_dec(self):
            return self.getTypedRuleContext(BKOOLParser.List_class_decContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_list_class_dec

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitList_class_dec" ):
                return visitor.visitList_class_dec(self)
            else:
                return visitor.visitChildren(self)




    def list_class_dec(self):

        localctx = BKOOLParser.List_class_decContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_list_class_dec)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self.class_dec()
            self.state = 111
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKOOLParser.CLASS:
                self.state = 110
                self.list_class_dec()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MptypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primitive_type(self):
            return self.getTypedRuleContext(BKOOLParser.Primitive_typeContext,0)


        def array_type(self):
            return self.getTypedRuleContext(BKOOLParser.Array_typeContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_mptype

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMptype" ):
                return visitor.visitMptype(self)
            else:
                return visitor.visitChildren(self)




    def mptype(self):

        localctx = BKOOLParser.MptypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_mptype)
        try:
            self.state = 115
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 113
                self.primitive_type()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 114
                self.array_type()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class_decContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(BKOOLParser.CLASS, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(BKOOLParser.ID)
            else:
                return self.getToken(BKOOLParser.ID, i)

        def LP(self):
            return self.getToken(BKOOLParser.LP, 0)

        def list_member(self):
            return self.getTypedRuleContext(BKOOLParser.List_memberContext,0)


        def RP(self):
            return self.getToken(BKOOLParser.RP, 0)

        def EXTENDS(self):
            return self.getToken(BKOOLParser.EXTENDS, 0)

        def getRuleIndex(self):
            return BKOOLParser.RULE_class_dec

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClass_dec" ):
                return visitor.visitClass_dec(self)
            else:
                return visitor.visitChildren(self)




    def class_dec(self):

        localctx = BKOOLParser.Class_decContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_class_dec)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self.match(BKOOLParser.CLASS)
            self.state = 118
            self.match(BKOOLParser.ID)
            self.state = 121
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKOOLParser.EXTENDS:
                self.state = 119
                self.match(BKOOLParser.EXTENDS)
                self.state = 120
                self.match(BKOOLParser.ID)


            self.state = 123
            self.match(BKOOLParser.LP)
            self.state = 124
            self.list_member()
            self.state = 125
            self.match(BKOOLParser.RP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class List_memberContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def list_attrib_dec(self):
            return self.getTypedRuleContext(BKOOLParser.List_attrib_decContext,0)


        def list_method_dec(self):
            return self.getTypedRuleContext(BKOOLParser.List_method_decContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_list_member

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitList_member" ):
                return visitor.visitList_member(self)
            else:
                return visitor.visitChildren(self)




    def list_member(self):

        localctx = BKOOLParser.List_memberContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_list_member)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            self.list_attrib_dec()
            self.state = 128
            self.list_method_dec()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class List_attrib_decContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attrib_dec(self):
            return self.getTypedRuleContext(BKOOLParser.Attrib_decContext,0)


        def list_attrib_dec(self):
            return self.getTypedRuleContext(BKOOLParser.List_attrib_decContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_list_attrib_dec

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitList_attrib_dec" ):
                return visitor.visitList_attrib_dec(self)
            else:
                return visitor.visitChildren(self)




    def list_attrib_dec(self):

        localctx = BKOOLParser.List_attrib_decContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_list_attrib_dec)
        try:
            self.state = 134
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 130
                self.attrib_dec()
                self.state = 131
                self.list_attrib_dec()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class List_method_decContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def method_dec(self):
            return self.getTypedRuleContext(BKOOLParser.Method_decContext,0)


        def list_method_dec(self):
            return self.getTypedRuleContext(BKOOLParser.List_method_decContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_list_method_dec

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitList_method_dec" ):
                return visitor.visitList_method_dec(self)
            else:
                return visitor.visitChildren(self)




    def list_method_dec(self):

        localctx = BKOOLParser.List_method_decContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_list_method_dec)
        try:
            self.state = 140
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BKOOLParser.BOOLEAN, BKOOLParser.FLOAT, BKOOLParser.INT, BKOOLParser.STRING, BKOOLParser.VOID, BKOOLParser.STATIC, BKOOLParser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 136
                self.method_dec()
                self.state = 137
                self.list_method_dec()
                pass
            elif token in [BKOOLParser.RP]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Decl_varContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FINAL(self):
            return self.getToken(BKOOLParser.FINAL, 0)

        def mptype(self):
            return self.getTypedRuleContext(BKOOLParser.MptypeContext,0)


        def list_attrib_const(self):
            return self.getTypedRuleContext(BKOOLParser.List_attrib_constContext,0)


        def SEMI(self):
            return self.getToken(BKOOLParser.SEMI, 0)

        def list_attrib_var(self):
            return self.getTypedRuleContext(BKOOLParser.List_attrib_varContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_decl_var

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecl_var" ):
                return visitor.visitDecl_var(self)
            else:
                return visitor.visitChildren(self)




    def decl_var(self):

        localctx = BKOOLParser.Decl_varContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_decl_var)
        try:
            self.state = 151
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BKOOLParser.FINAL]:
                self.enterOuterAlt(localctx, 1)
                self.state = 142
                self.match(BKOOLParser.FINAL)
                self.state = 143
                self.mptype()
                self.state = 144
                self.list_attrib_const()
                self.state = 145
                self.match(BKOOLParser.SEMI)
                pass
            elif token in [BKOOLParser.BOOLEAN, BKOOLParser.FLOAT, BKOOLParser.INT, BKOOLParser.STRING, BKOOLParser.VOID]:
                self.enterOuterAlt(localctx, 2)
                self.state = 147
                self.mptype()
                self.state = 148
                self.list_attrib_var()
                self.state = 149
                self.match(BKOOLParser.SEMI)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Attrib_decContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl_var(self):
            return self.getTypedRuleContext(BKOOLParser.Decl_varContext,0)


        def STATIC(self):
            return self.getToken(BKOOLParser.STATIC, 0)

        def getRuleIndex(self):
            return BKOOLParser.RULE_attrib_dec

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAttrib_dec" ):
                return visitor.visitAttrib_dec(self)
            else:
                return visitor.visitChildren(self)




    def attrib_dec(self):

        localctx = BKOOLParser.Attrib_decContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_attrib_dec)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 154
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKOOLParser.STATIC:
                self.state = 153
                self.match(BKOOLParser.STATIC)


            self.state = 156
            self.decl_var()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class List_attrib_constContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attrib_const(self):
            return self.getTypedRuleContext(BKOOLParser.Attrib_constContext,0)


        def COMMA(self):
            return self.getToken(BKOOLParser.COMMA, 0)

        def list_attrib_const(self):
            return self.getTypedRuleContext(BKOOLParser.List_attrib_constContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_list_attrib_const

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitList_attrib_const" ):
                return visitor.visitList_attrib_const(self)
            else:
                return visitor.visitChildren(self)




    def list_attrib_const(self):

        localctx = BKOOLParser.List_attrib_constContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_list_attrib_const)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 158
            self.attrib_const()
            self.state = 161
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKOOLParser.COMMA:
                self.state = 159
                self.match(BKOOLParser.COMMA)
                self.state = 160
                self.list_attrib_const()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class List_attrib_varContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attrib_var(self):
            return self.getTypedRuleContext(BKOOLParser.Attrib_varContext,0)


        def COMMA(self):
            return self.getToken(BKOOLParser.COMMA, 0)

        def list_attrib_var(self):
            return self.getTypedRuleContext(BKOOLParser.List_attrib_varContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_list_attrib_var

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitList_attrib_var" ):
                return visitor.visitList_attrib_var(self)
            else:
                return visitor.visitChildren(self)




    def list_attrib_var(self):

        localctx = BKOOLParser.List_attrib_varContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_list_attrib_var)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 163
            self.attrib_var()
            self.state = 166
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKOOLParser.COMMA:
                self.state = 164
                self.match(BKOOLParser.COMMA)
                self.state = 165
                self.list_attrib_var()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Attrib_constContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKOOLParser.ID, 0)

        def exp(self):
            return self.getTypedRuleContext(BKOOLParser.ExpContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_attrib_const

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAttrib_const" ):
                return visitor.visitAttrib_const(self)
            else:
                return visitor.visitChildren(self)




    def attrib_const(self):

        localctx = BKOOLParser.Attrib_constContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_attrib_const)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 168
            self.match(BKOOLParser.ID)
            self.state = 169
            self.match(BKOOLParser.T__0)
            self.state = 170
            self.exp()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Attrib_varContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKOOLParser.ID, 0)

        def exp(self):
            return self.getTypedRuleContext(BKOOLParser.ExpContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_attrib_var

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAttrib_var" ):
                return visitor.visitAttrib_var(self)
            else:
                return visitor.visitChildren(self)




    def attrib_var(self):

        localctx = BKOOLParser.Attrib_varContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_attrib_var)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 172
            self.match(BKOOLParser.ID)
            self.state = 175
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKOOLParser.T__0:
                self.state = 173
                self.match(BKOOLParser.T__0)
                self.state = 174
                self.exp()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Method_decContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STATIC(self):
            return self.getToken(BKOOLParser.STATIC, 0)

        def mptype(self):
            return self.getTypedRuleContext(BKOOLParser.MptypeContext,0)


        def ID(self):
            return self.getToken(BKOOLParser.ID, 0)

        def LB(self):
            return self.getToken(BKOOLParser.LB, 0)

        def RB(self):
            return self.getToken(BKOOLParser.RB, 0)
